--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,99 +205,410 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'home_team': True,\n",
+       "  'away_team': False,\n",
+       "  'country': 'France',\n",
+       "  'num_passes': 484,\n",
+       "  'passes_completed': 423,\n",
+       "  'fouls_committed': 16,\n",
+       "  'colors': ['blue', 'white', 'red'],\n",
+       "  'players': [{'name': 'Hugo LLORIS',\n",
+       "    'captain': True,\n",
+       "    'shirt_number': 1,\n",
+       "    'position': 'Goalie'},\n",
+       "   {'name': 'Benjamin PAVARD',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 2,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Raphael VARANE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 4,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Samuel UMTITI',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 5,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Paul POGBA',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 6,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Antoine GRIEZMANN',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 7,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Kylian MBAPPE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 10,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Ousmane DEMBELE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 11,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Corentin TOLISSO',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 12,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Ngolo KANTE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 13,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Lucas HERNANDEZ',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 21,\n",
+       "    'position': 'Defender'}]},\n",
+       " {'home_team': False,\n",
+       "  'away_team': True,\n",
+       "  'country': 'Australia',\n",
+       "  'num_passes': 390,\n",
+       "  'passes_completed': 332,\n",
+       "  'fouls_committed': 19,\n",
+       "  'colors': ['green', 'gold'],\n",
+       "  'players': [{'name': 'Mathew RYAN',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 1,\n",
+       "    'position': 'Goalie'},\n",
+       "   {'name': 'Mark MILLIGAN',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 5,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Mathew LECKIE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 7,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Robbie KRUSE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 10,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Andrew NABBOUT',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 11,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Aaron MOOY',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 13,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Mile JEDINAK',\n",
+       "    'captain': True,\n",
+       "    'shirt_number': 15,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Aziz BEHICH',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 16,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Joshua RISDON',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 19,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Trent SAINSBURY',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 20,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Tom ROGIC',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 23,\n",
+       "    'position': 'Midfield'}]}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# iterate over the soccer_match list to create a new list with the name of the country for each team\n",
-    "countries = None\n",
-    "# code goes here"
+    "soccer_match"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['France']\n",
+      "['France', 'Australia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterate over the soccer_match list to create a new list with the name of the country for each team\n",
+    "countries = []\n",
+    "# code goes here\n",
+    "for match in soccer_match:\n",
+    "    countries.append(match['country'])\n",
+    "    print(countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blue', 'white', 'red', 'green', 'gold']\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
-    "colors = None\n",
-    "# code goes here"
+    "# code goes here\n",
+    "colors = []\n",
+    "for match in soccer_match:\n",
+    "    for color in match['colors']:\n",
+    "        colors.append(color)\n",
+    "\n",
+    "print(colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Benjamin PAVARD', 'captain': False, 'shirt_number': 2, 'position': 'Defender'}, {'name': 'Raphael VARANE', 'captain': False, 'shirt_number': 4, 'position': 'Defender'}, {'name': 'Samuel UMTITI', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}, {'name': 'Paul POGBA', 'captain': False, 'shirt_number': 6, 'position': 'Midfield'}, {'name': 'Antoine GRIEZMANN', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}, {'name': 'Kylian MBAPPE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}, {'name': 'Ousmane DEMBELE', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}, {'name': 'Corentin TOLISSO', 'captain': False, 'shirt_number': 12, 'position': 'Midfield'}, {'name': 'Ngolo KANTE', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}, {'name': 'Lucas HERNANDEZ', 'captain': False, 'shirt_number': 21, 'position': 'Defender'}, {'name': 'Mathew RYAN', 'captain': False, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Mark MILLIGAN', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}, {'name': 'Mathew LECKIE', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}, {'name': 'Robbie KRUSE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}, {'name': 'Andrew NABBOUT', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}, {'name': 'Aaron MOOY', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}, {'name': 'Mile JEDINAK', 'captain': True, 'shirt_number': 15, 'position': 'Midfield'}, {'name': 'Aziz BEHICH', 'captain': False, 'shirt_number': 16, 'position': 'Defender'}, {'name': 'Joshua RISDON', 'captain': False, 'shirt_number': 19, 'position': 'Defender'}, {'name': 'Trent SAINSBURY', 'captain': False, 'shirt_number': 20, 'position': 'Defender'}, {'name': 'Tom ROGIC', 'captain': False, 'shirt_number': 23, 'position': 'Midfield'}]\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from each team\n",
     "# this should be only one list containing the dictionaries for each of the country's players\n",
-    "players = None\n",
-    "# code goes here"
+    "players = []\n",
+    "# code goes here\n",
+    "for match in soccer_match:\n",
+    "    for player in match['players']:\n",
+    "        players.append(player)\n",
+    "\n",
+    "print(players)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Mile JEDINAK', 'captain': True, 'shirt_number': 15, 'position': 'Midfield'}]\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the captains from each team\n",
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
-    "captains = None\n",
-    "# code goes here"
+    "captains = []\n",
+    "# code goes here\n",
+    "for match in soccer_match:\n",
+    "    for player in match['players']:\n",
+    "        if player['captain'] == True:\n",
+    "            captains.append(player)\n",
+    "\n",
+    "print(captains)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Benjamin PAVARD',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 2,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Raphael VARANE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 4,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Samuel UMTITI',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 5,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Paul POGBA',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 6,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Antoine GRIEZMANN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Kylian MBAPPE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Ousmane DEMBELE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Corentin TOLISSO',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 12,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Ngolo KANTE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 13,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Lucas HERNANDEZ',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 21,\n",
+       "  'position': 'Defender'}]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from ONLY the home team\n",
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
-    "home_team_players = None\n",
-    "# code goes here"
+    "home_team_players = []\n",
+    "# code goes here\n",
+    "for match in soccer_match:\n",
+    "    if match['home_team'] == True:\n",
+    "        for player in match['players']:\n",
+    "            home_team_players.append(player)\n",
+    "\n",
+    "home_team_players"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Mathew LECKIE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Robbie KRUSE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Andrew NABBOUT',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list \n",
     "# with the players from ONLY the away team with the position of forward\n",
     "# this should be only one list containing the dictionaries for each of the selected players\n",
-    "forwards = None\n",
-    "# code goes here"
+    "forwards = []\n",
+    "# code goes here\n",
+    "for match in soccer_match:\n",
+    "    if match['away_team']:\n",
+    "        for player in match['players']:\n",
+    "            if player['position'] == 'Forward':\n",
+    "                forwards.append(player)\n",
+    "forwards"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Tom ROGIC', 'captain': False, 'shirt_number': 23, 'position': 'Midfield'}\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = None\n",
-    "# code goes here"
+    "# code goes here\n",
+    "for match in soccer_match:\n",
+    "    for player in match['players']:\n",
+    "        if (player['shirt_number']) >= (player['shirt_number']):\n",
+    "            player_with_highest_num = player\n",
+    "print(player_with_highest_num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hugo Lloris',\n",
+       " 'Benjamin Pavard',\n",
+       " 'Raphael Varane',\n",
+       " 'Samuel Umtiti',\n",
+       " 'Paul Pogba',\n",
+       " 'Antoine Griezmann',\n",
+       " 'Kylian Mbappe',\n",
+       " 'Ousmane Dembele',\n",
+       " 'Corentin Tolisso',\n",
+       " 'Ngolo Kante',\n",
+       " 'Lucas Hernandez',\n",
+       " 'Mathew Ryan',\n",
+       " 'Mark Milligan',\n",
+       " 'Mathew Leckie',\n",
+       " 'Robbie Kruse',\n",
+       " 'Andrew Nabbout',\n",
+       " 'Aaron Mooy',\n",
+       " 'Mile Jedinak',\n",
+       " 'Aziz Behich',\n",
+       " 'Joshua Risdon',\n",
+       " 'Trent Sainsbury',\n",
+       " 'Tom Rogic']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# as we can see, the players all have their last names in all caps, as if they are being yelled\n",
     "# we want a list of all the names of the players in this match\n",
     "# but we want both first and last names to be formatted in title case\n",
-    "player_names = None\n",
-    "# code goes here"
+    "player_names = []\n",
+    "# code goes here\n",
+    "for match in soccer_match:\n",
+    "    for player in match['players']:\n",
+    "        player_names.append(player['name'].title())\n",
+    "\n",
+    "player_names"
    ]
   },
   {
@@ -317,9 +628,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -331,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
